--- a/project/moodlight.html
+++ b/project/moodlight.html
@@ -60,7 +60,7 @@
                         <h2 class="keep-all"><strong> <span>MoodLight</span>心晴</strong>
                         </h2>
                         <p class="color-orange">大數據應用專題</p>
-                        <p>Moodlight, lighten your mood. 心晴，點亮你的心。<br>一款兼備即時性、客製化，並帶給使用者自癒能力的工具
+                        <p>Moodlight, lighten your mood. <br>心晴，點亮你的心。<br>一款兼備即時性、客製化，並帶給使用者自癒能力的工具
                         </p>
                     </div>
                 </div>
@@ -108,6 +108,7 @@
         <a class="ms-3 list-group-item list-group-item-action" href="#workflow">技術運作</a>
         <a class="ms-3 list-group-item list-group-item-action" href="#uidesign">介面設計</a>
         <a class="ms-3 list-group-item list-group-item-action" href="#analysis">市場分析</a>
+        <a class="list-group-item list-group-item-action" href="#award">獎項</a>
         <a class="list-group-item list-group-item-action" href="#learning">學習</a>
     </div>
 
@@ -120,7 +121,7 @@
                     <div class="col-lg-8 my-3">
                         <h3 class="page-heading"><strong>目標</strong></h3>
                         <p class="content-black">
-                            為受負面情緒所困的人，設計一款 MoodLight APP ，期望藉由使用者數據，透過K-means 分群，採用NoSQL資料庫，提供客製化的<span class="color-yellow">情緒記錄日記與活動推薦系統</span>，讓使用者逐漸找到生活中的快樂。
+                            為受負面情緒所困的人，設計一款 MoodLight APP ，期望藉由使用者數據，透過K-means 分群，採用NoSQL資料庫，提供客製化的<span class="color-orange">情緒記錄日記與活動推薦系統</span>，讓使用者逐漸找到生活中的快樂。
                         </p>
                     </div>
 
@@ -257,138 +258,93 @@
 
                         </div>
 
-                        <div class="content-black">
-                            <p>我們邀請35位受試者分為兩組進行遠端易用性測試和訪談，用以了解使用者使用Pocket World AR 觀賞袖珍作品的回饋。
-                            </p>
-                            <p>我們設計兩個影片原型進行遠端使用者測試：
-                            </p>
-                            <p>
-                                1. 原型一：提供一般功能 AR 讓使用者與展品互動，包含Pocket PALM、Pocket MEGA
-                                <br> 2. 原型二：相較原型一，增加視角轉換的互動功能，包含Pocket PALM、Pocket MEGA、Gulliver World
-                            </p>
-                            <p>
-                                <br> 透過質化（訪談）與量化（易用性測試、問卷量表）的方式，蒐集以下資訊：
-                                <br>
-                                <div class="row mx-auto">
-                                    <div class="page-tag keep-all">博物館 AR 使用經驗</div>
-                                    <div class="page-tag keep-all my-auto">使用原因</div>
-                                    <div class="page-tag keep-all">預期功能</div>
-                                    <div class="page-tag keep-all">有用性 (helpfulness)</div>
-                                    <div class="page-tag keep-all">有效性 (effectiveness)</div>
-
+                        <!-- 原型設計 -->
+                        <div class="row justify-content-center">
+                            <div class="col-lg-6 col-md-6 col-sm-6 mt-5">
+                                <p class="pt-4 second-heading"><strong>1. 進入頁</strong>
+                                </p>
+                                <p class="content-black">化身可愛小幫手姆姆與使用者對話</p>
+                                <div class="d-flex justify-content-center">
+                                    <img class="mb-3" width="60%" src="../img/feature-project/moodlight/loading-m.png" alt="MoodLight 進入頁">
                                 </div>
-                            </p>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 mt-5">
+                                <p class="pt-4 second-heading"><strong>2. 歡迎頁</strong>
+                                </p>
+                                <p class="content-black">好到糟五個心情等級拉桿，輕鬆紀錄</p>
+                                <div class="d-flex justify-content-center">
+                                    <img class="mb-3" width="60%" src="../img/feature-project/moodlight/moodlight-m.png" alt="MoodLight 歡迎頁">
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 mt-5">
+                                <p class="pt-4 second-heading"><strong>3. 主畫面</strong>
+                                </p>
+                                <p class="content-black">心情愉悅，透過快樂日記記錄心情；心情低落時，使用來點輕鬆進行心情分析</p>
+
+                                <div class="d-flex justify-content-center">
+                                    <img class="mb-3" width="60%" src="../img/feature-project/moodlight/main-m.png" alt="MoodLight 主畫面">
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6 col-md-6 col-sm-6 mt-5">
+                                <p class="pt-4 second-heading"><strong>4. 快樂日記</strong>
+                                </p>
+                                <p class="content-black">透過五個快樂燈泡顯示快樂程度，並使用圖像化欄位輕鬆記錄日記</p>
+                                <div class="d-flex justify-content-center">
+                                    <img class="mb-3" width="60%" src="../img/feature-project/moodlight/diary-m.png" alt="MoodLight 快樂日記">
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 mt-5">
+                                <p class="pt-4 second-heading"><strong>5. 不快樂分析</strong>
+                                </p>
+                                <p class="content-black">五個負面燈泡表示心情負面程度，下方欄位可具體敘述事件和心情</p>
+                                <div class="d-flex justify-content-center">
+                                    <img class="mb-3" width="60%" src="../img/feature-project/moodlight/badmood-m.png" alt="MoodLight 不快樂分析">
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 mt-5">
+                                <p class="pt-4 second-heading"><strong>6. 快樂清單</strong>
+                                </p>
+                                <p class="content-black">系統自動比對推薦使用者快樂清單，可選擇執行或跳過</p>
+                                <div class="d-flex justify-content-center">
+                                    <img class="mb-3" width="60%" src="../img/feature-project/moodlight/suggestion-m.png" alt="MoodLight 快樂清單">
+                                </div>
+                            </div>
                         </div>
                     </div>
+
                     <div id="analysis" class="col-lg-8 my-5">
                         <h3 class="page-heading my-3"><strong>05 市場分析</strong></h3>
                         <div class="content-black">
-                            <p>我們邀請35位受試者分為兩組進行遠端易用性測試和訪談，用以了解使用者使用Pocket World AR 觀賞袖珍作品的回饋。
-                            </p>
-                            <p>我們設計兩個影片原型進行遠端使用者測試：
-                            </p>
                             <p>
-                                1. 原型一：提供一般功能 AR 讓使用者與展品互動，包含Pocket PALM、Pocket MEGA
-                                <br> 2. 原型二：相較原型一，增加視角轉換的互動功能，包含Pocket PALM、Pocket MEGA、Gulliver World
+                                MoodLight 旨在提供最即時且精確有效的協助，故將目標鎖定在「調解憂鬱之即時性」，以及「協助紓解憂鬱之有效性」兩者皆具有優勢的市場，作為品牌定位。
                             </p>
-                            <p>
-                                <br> 透過質化（訪談）與量化（易用性測試、問卷量表）的方式，蒐集以下資訊：
-                                <br>
-                                <div class="row mx-auto">
-                                    <div class="page-tag keep-all">博物館 AR 使用經驗</div>
-                                    <div class="page-tag keep-all my-auto">使用原因</div>
-                                    <div class="page-tag keep-all">預期功能</div>
-                                    <div class="page-tag keep-all">有用性 (helpfulness)</div>
-                                    <div class="page-tag keep-all">有效性 (effectiveness)</div>
-                            </p>
-                            </div>
                         </div>
-                    </div>
-                    <div id="finding" class="col-lg-8 my-5 ">
-                        <h3 class="page-heading my-3 "><strong>04 結果 & 迭代</strong></h3>
-                        <div class="row justify-content-center ">
-                            <div class="my-3 ">
-                                <h3 class="page-heading mb-3 "><strong>整體而言，<span>Pocket World </span> 能增加觀眾欣賞袖珍作品的興趣與吸引力，有效幫助觀眾探索袖珍作品的細節設計。</strong></h3>
-                                <div class="row justify-content-center mx-2 mb-2">
-                                    <!-- 易用性分數 -->
-                                    <div class="col-lg-8 col-md-7 col-sm-7 text-center my-3 ">
-                                        <table class="table table-bordered ">
-                                            <thead>
-                                                <th scope="col "></th>
-                                                <th scope="col ">易用性</th>
-                                                <th scope="col ">有用性</th>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <th scope="row ">Pocket PALM</th>
-                                                    <td class="table-warning ">4.51</td>
-                                                    <td>4.26</td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row ">Pocket MEGA</th>
-                                                    <td>4.17</td>
-                                                    <td class="table-warning ">4.29</td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row ">Gulliver World</th>
-                                                    <td>4.00</td>
-                                                    <td class="table-warning ">4.69</td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row ">平均</th>
-                                                    <td>4.23</td>
-                                                    <td>4.41</td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                    <div class="col-lg-4 col-md-5 col-sm-5 text-center my-auto ">
-                                        <table class="table table-bordered ">
-                                            <thead>
-                                                <th scope="col "></th>
-                                                <th scope="col ">使用意願與動機</th>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <th scope="row ">G1</th>
-                                                    <td>4.18</td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row ">G2</th>
-                                                    <td class="table-warning ">4.50</td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                                <div class="row list-padding ">
-                                    <ui class="content-black ">
-                                        <li class="mb-2 "><span>易用性：</span>Pocket PALM 中，旋轉與放大的功能最容易操作</li>
-                                        <li class="my-2 "><span>有用性：</span>Pocket MEGA 中，空間辨識 AR 能幫助使用者更靠近觀看模型，了解更多的細節設計，且打破實體博物館空間的限制</li>
-                                        <li class="my-2 "><span>第一人稱視角：</span>Gulliver World 能提供更沉浸且有趣的體驗，讓使用者更願意探索其中</li>
-                                    </ui>
-                                </div>
+                        <div class="img-margin d-flex justify-content-center">
+                            <img class="mb-5 " width="80%" src="../img/feature-project/moodlight/brand-m.png" alt="MoodLight 品牌知覺圖">
+                        </div>
+                        <div class="row list-padding ">
 
-                            </div>
+                            <ui class="content-black ">
+                                <p> 藉由SWOT分析此產品在該市場的優勢及劣勢，並評估未來可能面臨的機會及威脅：</p>
+                                <li class="mb-2 "><span>S 優勢：</span>客製化快樂清單與吸睛介面，透過APP給予及時協助</li>
+                                <li class="my-2 "><span>W 劣勢：</span>須累積資料庫以提升精確度、遠端協助難以確切掌握</li>
+                                <li class="my-2 "><span>O 機會：</span>結合沉浸式科技，以發展多元協助</li>
+                                <li class="my-2 "><span>T 威脅：</span>競爭激烈且存有隱私權疑慮</li>
+                            </ui>
                         </div>
                     </div>
                 </div>
         </section>
 
-        <section id="poster" class="list-item" style="background-color: #f7f7f7;">
+        <section id="award" class="list-item" style="background-color: #f7f7f7;">
             <div class="container">
-                <h4 class="heading my-4 project-heading">海報論文 Poster</h4>
+                <h4 class="heading my-4 project-heading">獎項 Award</h4>
                 <div class="row justify-content-center">
                     <div id="research" class="col-lg-8 my-3">
-                        <h3 class="page-heading my-2"><span>TAICHI'22 / CSCW'22</span></h3>
-                        <div class="card p-0 mb-4">
-                            <img src="../img/feature-project/pocketworld/pocket-poster.png">
-                        </div>
-                        <div class="row list-padding mb-3">
-                            <ui class="content-black">
-                                <li class="mb-2">Yang, T.-L., Hsu, C.-C. & Lin, W. (2022, October). Pocket World: Using Mobile AR to Tour Visitors in a Miniature Museum. Poster accepted for presentation at TAICHI2022.</li>
-                                <li class="my-2">Yang, T.-L., Hsu, C.-C. & Lin, W. (2022, November). Pocket World: Using Mobile AR to Tour Visitors in a Miniature Museum. Inviting Poster at CSCW2022, Online.</li>
-                            </ui>
+                        <h3 class="page-heading my-2"><span>110年 全國大學校院數位人文大數據學生競賽 築夢組佳作</span></h3>
+                        <div class="d-flex justify-content-center mb-4">
+                            <img width="80%" src="../img/feature-project/moodlight/award-m.jpg" alt="110年全國大學校院數位人文大數據學生競賽築夢組佳作">
                         </div>
                     </div>
                 </div>
@@ -400,24 +356,27 @@
                 <h4 class="heading my-4 project-heading">學習 Learning</h4>
                 <div class="row justify-content-center">
                     <div id="research" class="col-lg-8 my-3">
-                        <h3 class="page-heading my-2"><strong>沉浸式科技的導入要能夠滿足與使用者的需求動機，才能有良好的互動成效。</strong></h3>
+                        <h3 class="page-heading my-2"><strong></strong></h3>
                         <div class="content-black">
-                            <p>沉浸式科技的導入要能夠滿足與使用者的需求動機，才能有良好的互動成效。 經過這個專案讓我了解沉浸式科技AR、VR的使用差異，以及認識到設計師對於互動科技的選擇，對使用者的體驗有很大的影響。透過完整的測試流程，能幫助我認識使用者在操作時的行為與感受，藉此優化未來的設計。
+                            <p>
+                                對於大數據的技術如何運作一開始不是很熟悉，透過請教教授，讓我們了解數據在使用流程上的可能性，在未來設計專案上也會遇到不同的主題，需要學習如何快速掌握主題方向。
+                            </p>
+                            <p>
+                                藉由流程圖與介面的設計，能夠幫助我們在規劃專案實作前，劃分需要的頁面內容，以及使用者資訊與資料庫互動的流程，同時掌握我們的設計需求是否能在流程中被滿足。不過可惜的是，因時間因素，此專案並未進行使用者測試，而是先藉由市場分析，以區分需求市場。
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="row justify-content-center mt-5">
                     <div class="col-lg-8 row">
-                        <div class="text-start col-6">
+                        <div class="text-start col-3">
                             <a class="py-1 go-tag" onclick="self.location.href='../index.html'" value="回首頁"><span>回首頁</span></a>
                         </div>
-                        <div class="text-end col-6">
-                            <a class="py-1 go-tag" onclick="self.location.href='project02.html'"><span>NEXT | 心晴 MoodLight</span></a>
+                        <div class="text-end col-9">
+                            <a class="py-1 go-tag" onclick="self.location.href='project02.html'"><span>NEXT | ex.share 經驗分享平台</span></a>
                         </div>
                     </div>
                 </div>
-            </div>
             </div>
 
         </section>
