--- a/project/pocketWorld.html
+++ b/project/pocketWorld.html
@@ -386,7 +386,7 @@
                     <div id="research " class="col-lg-8 my-3 ">
                         <h3 class="page-heading my-2 "><strong>沉浸式科技的導入要能夠滿足與使用者的需求動機，才能有良好的互動成效。</strong></h3>
                         <div class="content-black ">
-                            <p>沉浸式科技的導入要能夠滿足與使用者的需求動機，才能有良好的互動成效。 經過這個專案讓我了解沉浸式科技AR、VR的使用差異，以及認識到設計師對於互動科技的選擇，對使用者的體驗有很大的影響。透過完整的測試流程，能幫助我認識使用者在操作時的行為與感受，藉此優化未來的設計。
+                            <p>經過這個專案讓我了解沉浸式科技AR、VR的使用差異，以及認識到設計師對於互動科技的選擇，對使用者的體驗有很大的影響。透過完整的測試流程，能幫助我認識使用者在操作時的行為與感受，藉此優化未來的設計。
                             </p>
                         </div>
                     </div>
