--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                 <div class="row project-reverse">
                     <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
                         <div class="project-black mx-3">
-                            <h3 class="keep-all"><strong> Eggy 時光雞</strong></World>
+                            <h3 class="keep-all"><strong> ex.share 經驗分享平台</strong></World>
                             </h3>
-                            <p>藉由Eggy可協助囤物症者判斷物品價值，提升物品丟棄動力，並以小雞破蛋形象，增加互動趣味性。</p>
-                            <h4 class="">#人機互動 #UX設計 #使用者研究</h4>
+                            <p>ex.share 希望使用者能分享自己舉辦活動的經驗與細節，有利於缺乏活動經驗與有經驗者能夠彼此交流，達成知識的再利用循環。</p>
+                            <h4 class="">#資訊架構設計 #UI設計 #使用者研究</h4>
                             <br>
                             <a href="#about" class="btn project-tag" data-wow-delay="1.4s">
                                 <h4>了解更多</h4>
@@ -148,7 +148,7 @@
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <a href="./index.html">
-                            <img style="width: 80%;" class="center" src="./img/eggy.png" alt="Eggy時光雞">
+                            <img style="width: 80%;" class="center" src="./img/feature-project/exshare/cover-ex.png" alt="ex.share經驗分享平台">
                         </a>
                     </div>
                 </div>
