--- a/project/exshare.html
+++ b/project/exshare.html
@@ -373,7 +373,7 @@
                             <a class="py-1 go-tag" onclick="self.location.href='../index.html'" value="回首頁"><span>回首頁</span></a>
                         </div>
                         <div class="text-end col-9">
-                            <a class="py-1 go-tag" onclick="self.location.href='./exshare.html'"><span>NEXT | ex.share 經驗分享平台</span></a>
+                            <a class="py-1 go-tag" onclick="self.location.href='project02.html'"><span>NEXT | ex.share 經驗分享平台</span></a>
                         </div>
                     </div>
                 </div>
