--- a/project/pocketWorld.html
+++ b/project/pocketWorld.html
@@ -52,7 +52,7 @@
     </div>
 
 
-    <section id="pocketWorld" class="project-page">
+    <section id="pocketWorld" class="project-page navbar-trans">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-md-12 col-sm-12 title-cover">
@@ -359,7 +359,7 @@
                 </div>
         </section>
 
-        <section id="poster " class="list-item " style="background-color: #f7f7f7; ">
+        <section id="poster" class="list-item " style="background-color: #f7f7f7; ">
             <div class="container ">
                 <h4 class="heading my-4 project-heading ">海報論文 Poster</h4>
                 <div class="row justify-content-center ">
@@ -379,7 +379,7 @@
             </div>
         </section>
 
-        <section id="learning " class="list-item ">
+        <section id="learning" class="list-item ">
             <div class="container ">
                 <h4 class="heading my-4 project-heading ">學習 Learning</h4>
                 <div class="row justify-content-center ">
