ex.share project

--- a/project/moodlight.html
+++ b/project/moodlight.html
@@ -59,7 +59,7 @@
                     <div class="">
                         <h2 class="keep-all"><strong> <span>MoodLight</span>心晴</strong>
                         </h2>
-                        <p class="color-orange">大數據應用專題</p>
+                        <p class="color-orange">大數據應用 APP 設計</p>
                         <p>Moodlight, lighten your mood. <br>心晴，點亮你的心。<br>一款兼備即時性、客製化，並帶給使用者自癒能力的工具
                         </p>
                     </div>
@@ -73,7 +73,7 @@
                 <div class="col-lg-2 col-md-6 col-sm-12">
                     <p class="project-title"><strong>類型</strong>
                     </p>
-                    <p>大數據應用<br>團體專案</p>
+                    <p>介面設計<br>團體專案</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-12">
                     <p class="project-title"><strong>角色</strong>
@@ -83,7 +83,7 @@
                 <div class="col-lg-2 col-md-6 col-sm-12">
                     <p class="project-title"><strong>方法</strong>
                     </p>
-                    <p>Flow Chart<br>市場分析<br>Figma 原型</p>
+                    <p>流程圖<br>Figma 原型<br>市場分析</p>
                 </div>
                 <div class="col-lg-2 col-md-6 col-sm-12">
                     <p class="project-title"><strong>工具</strong>
@@ -139,7 +139,7 @@
                     <div class="col-lg-8 my-3">
                         <h3 class="page-heading"><strong>原型</strong></h3>
                         <div class="mx-2 row justify-content-center">
-                            <iframe class="moodlight-iframe " style="border: 1px solid rgba(0, 0, 0, 0.1);" width="400" height="800" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FqCuuHUTKLu5B8fWuqVXkeH%2FMoodlight%3Fpage-id%3D0%253A1%26node-id%3D267-96%26starting-point-node-id%3D267%253A96"
+                            <iframe class="moodlight-iframe " style="border: 1px solid rgba(0, 0, 0, 0.1);" width="400" height="700" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FqCuuHUTKLu5B8fWuqVXkeH%2FMoodlight%3Fpage-id%3D0%253A1%26node-id%3D267-96%26starting-point-node-id%3D267%253A96"
                                 allowfullscreen></iframe>
                         </div>
                     </div>
