--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
                             <p>ex.share 希望使用者能分享自己舉辦活動的經驗與細節，有利於缺乏活動經驗與有經驗者能夠彼此交流，達成知識的再利用循環。</p>
                             <h4 class="">#資訊架構設計 #UI設計 #使用者研究</h4>
                             <br>
-                            <a href="#about" class="btn project-tag" data-wow-delay="1.4s">
+                            <a href="./project/exshare.html" class="btn project-tag" data-wow-delay="1.4s">
                                 <h4>了解更多</h4>
                             </a>
 
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        <a href="./index.html">
+                        <a href="./project/exshare.html">
                             <img style="width: 80%;" class="center" src="./img/feature-project/exshare/cover-ex.png" alt="ex.share經驗分享平台">
                         </a>
                     </div>
