ex.share project

--- a/project/exshare.html
+++ b/project/exshare.html
@@ -108,7 +108,7 @@
         <a class="ms-3 list-group-item list-group-item-action" href="#sitemap">資訊架構圖</a>
         <a class="ms-3 list-group-item list-group-item-action" href="#Lo-fi">線框圖</a>
         <a class="ms-3 list-group-item list-group-item-action" href="#Hi-fi">網站原型</a>
-        <a class="ms-3 list-group-item list-group-item-action" href="#usability">易用性測試</a>
+        <a class="ms-3 list-group-item list-group-item-action" href="#usability">使用者研究</a>
         <a class="ms-3 list-group-item list-group-item-action" href="#conclusion">結論</a>
         <a class="list-group-item list-group-item-action" href="#learning">學習</a>
     </div>
@@ -412,7 +412,10 @@
                         <h3 class="page-heading my-2 "><strong></strong></h3>
                         <div class="content-black ">
                             <p>
-                                學習透過使用者經驗要素模型，從頭至尾進行資訊結構設計、介面互動設計與使用者評估。
+                                這次專案運用一個月的時間，與小組合作，歷經整個介面設計流程，學習透過使用者經驗要素模型，從頭至尾進行資訊結構設計、介面互動設計與使用者測試，檢視原先的設計是否能滿足使用者需求。
+                            </p>
+                            <p>
+                                考驗的是團隊意見整合、合作共識，以及對網頁介面設計的認識，這樣的過程，能幫助我對往後的專案有良好的操作基礎。
                             </p>
 
                         </div>
