--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
 
     <!-- media query preload -->
-    <link rel="preload" href="./img/home_bg.jpg" as="image" />
+    <link rel="preload" href="./img/home_bg.png" as="image" />
 </head>
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -93,8 +93,12 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        <a href="./project/pocketWorld.html">
+                        <!-- <a href="./project/pocketWorld.html">
                             <img style="width: 100%;" class="center" src="./img/feature-project/pocketworld/pocket-cover-mobile.png" alt="Pocket World AR">
+                        </a> -->
+                        <a class="d-flex justify-content-center" href="./project/pocketWorld.html">
+                            <div class="d-flex mb-3 img-mobile" style="background-image:url(./img/feature-project/pocketworld/pocket-cover-mobile.png); background-size: contain; background-repeat: no-repeat;background-position: center;">
+                            </div>
                         </a>
                     </div>
                 </div>
@@ -107,10 +111,16 @@
             <div class="container card">
                 <div class="row ">
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        <a href="./project/moodlight.html">
+                        <!-- <a href="./project/moodlight.html">
                             <img style="width: 100%;" class="center" src="./img/feature-project/moodlight/moodlight-mockup.png" alt="MoodLight心晴">
+                        </a> -->
+
+                        <a class="d-flex justify-content-center" href="./project/moodlight.html">
+                            <div class="d-flex mb-3 img-mobile" style="background-image:url(./img/feature-project/moodlight/moodlight-mockup.png); background-size: cover; background-repeat: no-repeat;background-position: center;">
+                            </div>
                         </a>
                     </div>
+
                     <div class="col-lg-6 col-md-6 col-sm-12 project-intro">
                         <div class="project-black mx-3">
                             <h3 class="keep-all"><strong> MoodLight 心晴</strong></World>
@@ -147,9 +157,13 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        <a href="./project/exshare.html">
-                            <img style="width: 80%;" class="center" src="./img/feature-project/exshare/cover-ex.png" alt="ex.share經驗分享平台">
+                        <a class="d-flex justify-content-center" href="./project/exshare.html">
+                            <div class="d-flex mb-3 img-mobile" style="background-image:url(./img/feature-project/exshare/cover-ex.png); background-size: contain; background-repeat: no-repeat;background-position: center;">
+                            </div>
                         </a>
+                        <!-- <a href="./project/exshare.html">
+                            <img style="width: 80%;" class="center" src="./img/feature-project/exshare/cover-ex.png" alt="ex.share經驗分享平台">
+                        </a> -->
                     </div>
                 </div>
             </div>
@@ -165,22 +179,24 @@
         </div>
         <section id="special-project" class="project">
             <div class="container px-0 ">
-                <div class="row mx-auto project-center ">
-                    <div class="card col-lg-5 col-md-5 col-sm-12 ">
+                <div class="row mx-auto project-center justify-content-center">
+                    <div class="card col-lg-5 col-md-8 col-sm-12 ">
                         <div class="row ">
-                            <div class="col-lg-12 col-md-12 col-sm-12">
-                                <a href="./index.html">
-                                    <img style="width: 100%;" class="center" src="./img/special-project/dream/dream1.png" alt="A Dream Within a Dream 夢中夢">
-                                </a>
-                            </div>
+                            <!-- <div class="d-flex justify-content-center ">
+                                <img class="mb-3" width="100% " src="./img/special-project/dream/dream1.png" alt="A Dream Within a Dream 夢中夢">
+                            </div> -->
+                            <a class="d-flex justify-content-center" href="./project/dream.html">
+                                <div class="d-flex mb-3 img-mobile" style="background-image:url(./img/special-project/dream/cover-dream.png); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                                </div>
+                            </a>
                             <div class="col-lg-12 col-md-12 col-sm-12 project-intro">
                                 <div class="project-black mx-3">
                                     <h3 class="keep-all"><strong>A Dream Within a Dream 夢中夢</strong></World>
                                     </h3>
-                                    <p>使用Kinect捕捉人影，運用Touchdesigner製作多媒體互動劇場，進行即時互動，結合地板光雕，創造四面白盒子互動體驗空間。</p>
+                                    <p>使用 Kinect 捕捉人影，運用 Touchdesigner 製作多媒體互動劇場，進行即時互動，結合地板光雕，創造四面白盒子互動體驗空間。</p>
                                     <h4 class="">#互動設計 #沉浸式劇場 </h4>
                                     <br>
-                                    <a href="#about" class="btn project-tag" data-wow-delay="1.4s">
+                                    <a href="./project/dream.html" class="btn project-tag" data-wow-delay="1.4s">
                                         <h4>了解更多</h4>
                                     </a>
 
@@ -189,20 +205,23 @@
 
                         </div>
                     </div>
-                    <div class="col-lg-1 col-md-1"></div>
-                    <div class="card col-lg-5 col-md-5 col-sm-12">
-                        <div class="row project2">
-                            <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class="col-lg-1 col-md-"></div>
+                    <div class="card col-lg-5 col-md-8 col-sm-12 ">
+                        <div class="row project2 ">
+                            <a class="d-flex justify-content-center" href="./index.html">
+                                <div class="d-flex mb-3 img-mobile" style="background-image:url(./img/special-project/createarttalk/cat-web.png);background-size: cover; background-repeat: no-repeat;background-position: center;">
+                                </div>
+                            </a>
+                            <!-- <div class="col-lg-12 col-md-12 col-sm-12">
                                 <a href="./index.html">
                                     <img style="width: 100%;" class="center" src="./img/special-project/createarttalk/cat-web.png" alt="CreateArtTalk 藝擴體工作室">
                                 </a>
-                                <!-- <div class="img-center" style="background-image: url(./img/special-project/createarttalk/cat-web.png); height: 200px; width: 450px; background-size: cover; background-position: center;"></div> -->
-                            </div>
+                            </div> -->
                             <div class="col-lg-12 col-md-12 col-sm-12 project-intro">
                                 <div class="project-black mx-3">
                                     <h3 class="keep-all"><strong>CreateArtTalk 藝擴體工作室</strong></World>
                                     </h3>
-                                    <p>將物聯網IoT技術結合科技藝術的新創團隊，提供藝術創作者多合一的互動IoT管理平台，以降低互動技術門檻。</p>
+                                    <p>將物聯網 IoT 技術結合科技藝術的新創團隊，提供藝術創作者多合一的互動 IoT 管理平台，以降低互動技術門檻。</p>
                                     <h4 class="">#前端設計 #新創專案 </h4>
                                     <br>
                                     <a href="#about" class="btn project-tag" data-wow-delay="1.4s">
