--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
 
     <!-- media query preload -->
-    <link rel="preload" href="./img/home_bg.png" as="image" />
+    <!-- <link rel="preload" href="./img/home_bg.png" as="image" /> -->
 </head>
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -208,15 +208,10 @@
                     <div class="col-lg-1 col-md-"></div>
                     <div class="card col-lg-5 col-md-8 col-sm-12 ">
                         <div class="row project2 ">
-                            <a class="d-flex justify-content-center" href="./index.html">
-                                <div class="d-flex mb-3 img-mobile" style="background-image:url(./img/special-project/createarttalk/cat-web.png);background-size: cover; background-repeat: no-repeat;background-position: center;">
+                            <a class="d-flex justify-content-center" href="./project/createarttalk.html">
+                                <div class="d-flex mb-3 img-mobile" style="background-image:url(./img/special-project/createarttalk/cover-cat.png);background-size: cover; background-repeat: no-repeat;background-position: center;">
                                 </div>
                             </a>
-                            <!-- <div class="col-lg-12 col-md-12 col-sm-12">
-                                <a href="./index.html">
-                                    <img style="width: 100%;" class="center" src="./img/special-project/createarttalk/cat-web.png" alt="CreateArtTalk 藝擴體工作室">
-                                </a>
-                            </div> -->
                             <div class="col-lg-12 col-md-12 col-sm-12 project-intro">
                                 <div class="project-black mx-3">
                                     <h3 class="keep-all"><strong>CreateArtTalk 藝擴體工作室</strong></World>
@@ -224,7 +219,7 @@
                                     <p>將物聯網 IoT 技術結合科技藝術的新創團隊，提供藝術創作者多合一的互動 IoT 管理平台，以降低互動技術門檻。</p>
                                     <h4 class="">#前端設計 #新創專案 </h4>
                                     <br>
-                                    <a href="#about" class="btn project-tag" data-wow-delay="1.4s">
+                                    <a href="./project/createarttalk.html" class=" btn project-tag " data-wow-delay="1.4s ">
                                         <h4>了解更多</h4>
                                     </a>
 
@@ -276,7 +271,7 @@
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js " integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N " crossorigin="anonymous "></script>
-    <script src="./js/custom.js"></script>
+    <script src="./js/custom.js "></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js "></script>
     <script src="js/sketch.js "></script> -->
 </body>
